# awa

./: .gitignore  README.md  git.ignore
apk/: app-debug.apk
app/: .gitignore  build.gradle  proguard-rules.pro
app/libs/freeimage/: FreeImage.h
app/libs/physx/foundation/unix/: PxUnixIntrinsics.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: actor.frag  actor.vert  debug.frag  debug.vert
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/core/: AndroidGame.cpp  AndroidGame.h  CMakeLists.txt  Geometry.cpp  Geometry.h  Shader.cpp  Shader.h  common.h  light.h
app/src/main/cpp/core/gameplay/: CMakeLists.txt  GameObject.cpp  GameObject.h
app/src/main/cpp/core/input/: CMakeLists.txt  InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h  ScreenBounds.cpp  ScreenBounds.h  TouchInputEvent.h  TouchInputHandler.cpp  TouchInputHandler.h  TouchLayer.cpp  TouchLayer.h
app/src/main/cpp/core/resource/: ResourceManager.cpp  ResourceManager.h
app/src/main/cpp/core/scene/: BaseScene.h  SceneManager.cpp  SceneManager.h
app/src/main/cpp/game/: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GlobalSettings.cpp  GlobalSettings.h  Level.cpp  Level.h  PhysicsSystem.h  PlayerController.cpp  PlayerController.h  Renderer.cpp  Renderer.h  Room.cpp  Room.h  Sphere.cpp  Sphere.h
app/src/main/cpp/game/geometry/: CMakeLists.txt  Cube.cpp  Cube.h  Geometry.cpp  Geometry.h  GeometryCache.cpp  GeometryCache.h  GeometryFactory.cpp  GeometryFactory.h  Line.cpp  Line.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
app/src/main/cpp/game/light/: BaseLight.h  PointLight.h
app/src/main/cpp/game/systems/: GameObjectComponent.cpp  GameObjectComponent.h
app/src/main/cpp/game/systems/graphics/: GraphicsComponent.cpp  GraphicsComponent.h  GraphicsSystem.cpp  GraphicsSystem.h  Shader.cpp  Shader.h
app/src/main/cpp/game/systems/graphics/light/: BaseLight.h  PointLight.h  light.h
app/src/main/cpp/game/systems/input/: ScreenBounds.cpp  ScreenBounds.h  TouchInputHandler.cpp  TouchLayer.cpp  TouchLayer.h
app/src/main/cpp/game/systems/physics/: PhysicsSystem.cpp  PhysicsSystem.h  RigidDynamicComponent.cpp  RigidDynamicComponent.h  RigidStaticComponent.cpp  RigidStaticComponent.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
